Added NimBLE library for lower-memory BLE implementation

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ lib_deps =
 	lovyan03/LovyanGFX@^1.2.7
 	fastled/FastLED@3.10.3
 	lvgl/lvgl@8.4.0
+	h2zero/NimBLE-Arduino@^2.3.7
 board_build.partitions = huge_app.csv
 upload_speed = 460800
 monitor_speed = 115200
